--- a/bload_donor/bload_donor_app/templates/report.html
+++ b/bload_donor/bload_donor_app/templates/report.html
@@ -51,10 +51,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div class="d-flex justify-content-end mb-3">
-            <a href="{% url 'export_report_csv' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-success me-2">Export CSV</a>
-            <a href="{% url 'export_report_pdf' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-danger">Export PDF</a>
-        </div>
+        
     </div>
 
     <div class="report-section mt-5">
@@ -81,6 +78,10 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="d-flex justify-content-end mb-3">
+            <a href="{% url 'export_report_csv' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-success me-2">Export CSV</a>
+            {% comment %} <a href="{% url 'export_report_pdf' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-danger">Export PDF</a> {% endcomment %}
+        </div>
     </div>
 </div>
 {% endblock %}
