--- a/bload_donor/bload_donor_app/templates/report_pdf_template.html
+++ b/bload_donor/bload_donor_app/templates/report_pdf_template.html
@@ -78,10 +78,10 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
-    <div class="d-flex justify-content-end mb-3">
-            <a href="{% url 'export_report_csv' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-success me-2">Export CSV</a>
-            <a href="{% url 'export_report_pdf' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-danger">Export PDF</a>
-    </div>
+    </div> 
 </div>
+<div class="d-flex justify-content-end mb-3">
+            <a href="{% url 'export_report_csv' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-success me-2">Export CSV</a>
+            {% comment %} <a href="{% url 'export_report_pdf' %}?month={{ request.GET.month }}&blood_type={{ request.GET.blood_type }}" class="btn btn-outline-danger">Export PDF</a> {% endcomment %}
+    </div>
 {% endblock %}
